Se refactoriza por rediseño

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body class="mat-typography font-family">
   <app-root></app-root>
 </body>
 </html>
